# pixel_kpi

./: .gitignore  README.md  pyproject.toml
examples/: github_star_stats.py  notion_github_rotate.py  notion_sprint.py  pypi_downloads.py
notebooks/: example_components.ipynb  example_displays.ipynb  example_github_stars_display.ipynb  example_notion_sprint_display.ipynb  example_rotating_view.ipynb
pixel_kpi/components/: bar_chart.py  firework.py  fullscreen_image.py  headline.py  line_chart.py  progress_bar.py  star_icon.py  text.py
pixel_kpi/connectors/: base_connector.py  github_connector.py  notion_connector.py  pypi_connector.py
pixel_kpi/displays/: base_display.py  matplotlib_display.py  pixoo_display.py  terminal_display.py
pixel_kpi/processors/: base_processor.py
pixel_kpi/processors/github/: star_processor.py
pixel_kpi/processors/notion/: sprint_processor.py
pixel_kpi/views/: base_view.py  firework_view.py  github_stars_view.py  notion_sprint_view.py  notion_sprint_with_sucess_view.py  package_download_view.py  rotating_view.py
