[tool.poetry]
name = "pixel_kpi"
version = "0.1.1"
description = "Create pixel-art KPI dashboards with GitHub, Notion & PyPi data visualization for Pixoo displays and more 🎨📊✨"
authors = ["Jochen Luithardt <jol@pi-optimal.com>"]
readme = "README.md"

[tool.poetry.urls]
repository = "https://github.com/KoOBaALT/pixel_kpi/tree/main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pixoo = "^0.9.2"
python-dotenv = "^1.0.1"
numpy = "^2.1.1"
pillow = "^10.4.0"
matplotlib = "^3.9.2"
pypistats = "^1.8.0"
ipython = "^8.32.0"

[tool.poetry.scripts]
pixel_kpi = "pixel_kpi.__main__:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
